--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Body styling */
 body {
-  background: #45499E;
-  color: #fff;
+  background: #8Fbc8f;
+  color: #45499E;
   font-family: Helvetica, Arial;
   font-size: 27px;
   font-weight: 300;
