--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body {
 
 /* Heading Styles */
 h1 {
-  font-size: 40px;
-  color: #E8C41E;
+  font-size: 48px;
+  color: #B12A2A;
   text-align: center;
 }
 
