--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Body styling */
 body {
   background: #8Fbc8f;
-  color: #45499E;
+  color: #C93838;
   font-family: Helvetica, Arial;
   font-size: 27px;
   font-weight: 300;
@@ -30,9 +30,9 @@ h1 {
 /* Submit Button, Columns, Questions, and Inputs */
 .button-submit {
   background: transparent;
-  border: 3px solid #fff;
+  border: 3px solid #e8c41e;
   border-radius: 6px;
-  color: #E8C41E;
+  color: #C93838;
   cursor: pointer; 
   display: block;
   font-size: 20px;
