--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1 {
 
 /* Submit Button, Columns, Questions, and Inputs */
 .button-submit {
-  background: FFFFFF;
+  background: 377CFB;
   border: 8px solid #eA7230E;
   border-radius: 4px;
   color: #C93838;
