--- a/style.css
+++ b/style.css
@@ -90,9 +90,9 @@ h1 {
 /* Answer Div */
 #answers {
   margin: 60px 0;
-  background: #FFFFFF;
+  background: #377CFB;
   border-radius: 6px;
-  color: #FFFFFF;
+  color: #377CFB;
   transition: 1s linear;
 }
 
