--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   background: #377CFB;
   color: #FFFFFF;
-  font-family: Helvetica, Arial;
+  font-family: "Gill Sans", sans-serif;
   font-size: 40px;
   font-weight: 300;
   line-height: 1.65em;
@@ -29,7 +29,7 @@ h1 {
 
 /* Submit Button, Columns, Questions, and Inputs */
 .button-submit {
-  background: 377CFB;
+  background: #ffffff;
   border: 8px solid #eA7230E;
   border-radius: 4px;
   color: #C93838;
@@ -65,7 +65,7 @@ h1 {
 .choice-bucket input {
   border: 0;
   border-radius: 6px;
-  color: #c0c0d3;
+  color: #000000;
   font-size: 18px;
   margin: 15px 4%;
   outline: 0;
@@ -90,7 +90,7 @@ h1 {
 /* Answer Div */
 #answers {
   margin: 60px 0;
-  background: #377CFB;
+  background: #ffffff;
   border-radius: 6px;
   color: #377CFB;
   transition: 1s linear;
