--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /* Body styling */
 body {
-  background: #8Fbc8f;
-  color: #45499E;
-  font-family: Helvetica, Arial;
-  font-size: 27px;
+  background: #377CFB;
+  color: #FFFFFF;
+  font-family: "Gill Sans", sans-serif;
+  font-size: 40px;
   font-weight: 300;
   line-height: 1.65em;
   margin: 0 auto;
@@ -15,7 +15,7 @@ body {
 /* Heading Styles */
 h1 {
   font-size: 48px;
-  color: #B12A2A;
+  color: #FFFFFF;
   text-align: center;
 }
 
@@ -29,13 +29,13 @@ h1 {
 
 /* Submit Button, Columns, Questions, and Inputs */
 .button-submit {
-  background: transparent;
-  border: 3px solid #fff;
-  border-radius: 6px;
-  color: #E8C41E;
+  background: #ffffff;
+  border: 8px solid #eA7230E;
+  border-radius: 4px;
+  color: #C93838;
   cursor: pointer; 
   display: block;
-  font-size: 20px;
+  font-size: 30px;
   font-weight: bold;  
   margin: 0 auto 60px;
   padding: 1em 2em; 
@@ -57,7 +57,7 @@ h1 {
 }
 
 .choice-bucket label {
-  font-size: 12px;
+  font-size: 18px;
   line-height: 13px;
   margin: 15px 4%;
 }
@@ -65,7 +65,7 @@ h1 {
 .choice-bucket input {
   border: 0;
   border-radius: 6px;
-  color: #c0c0d3;
+  color: #000000;
   font-size: 18px;
   margin: 15px 4%;
   outline: 0;
@@ -90,9 +90,9 @@ h1 {
 /* Answer Div */
 #answers {
   margin: 60px 0;
-  background: #E8C41E;
+  background: #ffffff;
   border-radius: 6px;
-  color: #713e94;
+  color: #377CFB;
   transition: 1s linear;
 }
 
